--- a/config/automation.conf
+++ b/config/automation.conf
@@ -1,13 +1,13 @@
 # V5 Log Processor Automation Configuration
-# Generated on Wed Sep 17 08:42:44 PM GMT 2025
+# Generated on Thu Sep 18 05:01:42 PM GMT 2025
 
 SERVER_VERSION="v5"
-DEVICE_LOCATION="ee"
+DEVICE_LOCATION="ff"
 PYTHON_SCRIPT="oc4d"
-S3_BUCKET="s3://upload-test"
-S3_SUBFOLDER="oc4d"
+S3_BUCKET="s3://rachel-upload-test"
+S3_SUBFOLDER="s"
 RUN_INTERVAL="86400"
 SCHEDULE_TYPE="daily"
 
 # Derived settings
-CONFIG_UPDATED="2025-09-17 20:42:44"
+CONFIG_UPDATED="2025-09-18 17:01:42"
